[tool.poetry]
name = "Blockchain"
version = "0.1.0"
description = "Blockchain tutorial"
authors = ["Farzad FARID <farzy@farzy.org>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
